<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_find_station"
        android:icon="@drawable/find_station"
        android:title="@string/find_station" />
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/favorite"
        android:title="@string/favorite" />
    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
</menu>
