<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.station_details.StationDetailFragment">

    <TextView
        android:id="@+id/textViewTitleDetail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/station_detail"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewDetail1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitleDetail"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageViewDetail2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDetail1"
        app:layout_constraintEnd_toStartOf="@+id/imageViewDetail3"
        app:layout_constraintStart_toEndOf="@+id/imageViewDetail1"
        app:layout_constraintTop_toTopOf="@+id/imageViewDetail1"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageViewDetail3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDetail2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewDetail2"
        app:layout_constraintTop_toTopOf="@+id/imageViewDetail2"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewStationName"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textViewStt2"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail2" />

    <TextView
        android:id="@+id/textViewStationAddress"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStationName" />

    <TextView
        android:id="@+id/textViewChargertype"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStationAddress" />

    <TextView
        android:id="@+id/textViewStt"
        android:layout_width="58dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="Status: "
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewChargertype" />

    <TextView
        android:id="@+id/textViewStt2"
        android:layout_width="101dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="Name Station: "
        android:textAlignment="viewEnd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDetail2" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStt"
        app:layout_constraintStart_toEndOf="@+id/textViewStt"
        app:layout_constraintTop_toTopOf="@+id/textViewStt" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        app:icon="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/maps"
        app:icon="@drawable/baseline_map_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPending"
        app:layout_constraintStart_toEndOf="@+id/buttonBack" />

    <Button
        android:id="@+id/buttonPending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pending"
        app:icon="@drawable/baseline_pending_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/favouritebutton"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/baseline_star_border_purple500_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStationAddress" />

    <Spinner
        android:id="@+id/spinnerPendingStation"
        android:layout_width="352dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStt" />

</androidx.constraintlayout.widget.ConstraintLayout>